<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context="com.gecode.registrocontacto.MostrarDatos"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/titulodatos"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="26dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/alturaCampos"
        android:orientation="horizontal"
        android:layout_marginTop="26dp" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user"
            android:id="@+id/ivNombre"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="@dimen/sizetext"
            android:layout_gravity="center"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:textStyle="italic"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyFecha"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alturaCampos"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/alturaCampos"
            android:id="@+id/imageFecha"
            android:src="@drawable/fecha"/>

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/stvfecha"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:textSize="@dimen/sizetext"
            android:textStyle="italic"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyTelefono"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alturaCampos"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageTel"
            android:src="@drawable/cellphone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tel."
            android:layout_gravity="center"
            android:textSize="@dimen/sizetext"
            android:textStyle="italic"
            />

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:layout_gravity="center"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:textSize="@dimen/sizetext"
            android:textStyle="italic"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alturaCampos"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageEmail"
            android:src="@drawable/mensaje"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email."
            android:layout_gravity="center"
            android:textSize="@dimen/sizetext"
            android:textStyle="italic"
            />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_gravity="center"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:textSize="@dimen/sizetext"
            android:textStyle="italic"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyDescripcion"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alturaCampos"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivDescripcion"
            android:src="@drawable/comentarios"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Descripción:"
            android:layout_gravity="center"
            android:textSize="@dimen/sizetext"
            android:textStyle="italic"
            />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/descripcion"
            android:layout_gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:textSize="@dimen/sizetext"
            android:textStyle="italic"
            android:lines="3"
            android:maxLines="3"
            />

    </LinearLayout>


    <Button
        android:id="@+id/btneditar"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/btneditar"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="30dp"

        />

</LinearLayout>
